# avitrail

./: .dockerignore  .gitignore  Dockerfile-backend  README.md  docker-compose-db.yml  docker-compose.yml  pyproject.toml  requirements.txt
avitrail/: manage.py
avitrail/airlines/: admin.py  models.py  serializers.py  urls.py  views.py
avitrail/airlines/migrations/: 0001_initial.py
avitrail/airports/: admin.py  models.py  serializers.py  urls.py  views.py
avitrail/airports/migrations/: 0001_initial.py
avitrail/avitrail/: asgi.py  urls.py  wsgi.py
avitrail/avitrail/management/commands/: import_airlines.py  import_airports.py
avitrail/avitrail/settings/: base.py  development.py
avitrail/flights/: admin.py  models.py  serializers.py  urls.py  views.py
avitrail/flights/migrations/: 0001_initial.py  0002_add_airline_airport_foreign_keys.py  0002_alter_flight_aircraft_alter_flight_tail_number.py
frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js  schema.ts
frontend/src/assets/css/: main.css
frontend/src/components/: FlightLog.vue
frontend/src/components/auth/: LoginForm.vue  RegistrationForm.vue
frontend/src/composables/: useSessionCheck.js
frontend/src/pages/: FlightLog.vue
frontend/src/router/: index.js
frontend/src/services/: airlines.js  airports.js  api.js  flights.js
frontend/src/stores/: auth.js  flights.js
frontend/src/utils/: auth.js  constants.js  helpers.js  validator.js
frontend/src/views/: Dashboard.vue  Flights.vue  Home.vue
(+5 files in other folders)
